--- a/src/css/PagePriklady.css
+++ b/src/css/PagePriklady.css
@@ -20,7 +20,7 @@
   height: fit-content;
   align-self: center;
   font-weight: 500;
-  font-family: 'Jost', sans-serif;
+  font-family: "Jost", sans-serif;
 }
 
 .priklady-center-check {
@@ -34,7 +34,7 @@
   align-items: center;
   padding: 0 10% 0 10%;
   background-color: #f3f3f3;
-  margin: 0 1rem 0 1rem;
+  margin: 0 3rem 0 3rem;
   border-radius: 25px;
   z-index: 1;
   overflow: hidden;
@@ -129,7 +129,7 @@
   margin: 0;
   padding: 0;
   width: 50%;
-  max-width: 550px;
+  max-width: 600px;
   min-width: 300px;
   display: flex;
   flex-direction: row;
@@ -146,10 +146,12 @@
 
 .priklady-ABCDlist > li {
   cursor: pointer;
-  text-align: center;
-  font-size: 2rem;
-  height: 3.2rem;
-  width: 3.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  height: 4rem;
+  width: 4rem;
   transition: all 0.2s;
   border-radius: 7px;
   position: relative;
